2002-09-20  Martin Weber <martweb@gmx.net>

	* color.c (GET_COLOR): Improved speed and better luminance calculation.

	* color.h (COLOR_LUMINANCE): Ditto.

	Message-ID: <32434.1032418120@www62.gmx.net>

2002-09-20  Martin Weber <martweb@gmx.net>

	* thin-image.c (thin3): This fix corrects some problems 
	with the thinning of regions that touch the image borders.

	Message-ID: <3D88C750.4AE643A5@gmx.net>.

2002-09-18  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.30.6.

	* configure.in: Added workarround for pstoedit-3.32.0.
	added c++ runtime library to LIBPSTOEDIT_LIBS.

2002-09-18  Martin Weber <martweb@gmx.net>

	* autotrace.dsp: 

	* autotrace.vcproj: Updated.

	Message-ID: <3D874D91.A57E8569@gmx.net>.

2002-09-12  Masatake YAMATO  <yamato@redhat.com>

	Martin suggested me that tmpnam is ANSI C 
	function so we don't have to check.
	
	* acconfig.h: removed HAVE_TMPNAM.

	* configure.in (HAVE_LIBPSTOEDIT): Checked mkstemp
	only.

	* output-pstoedit.c (make_temporary_file): used
	tmpnam if mkstemp is not found.

2002-09-11  Masatake YAMATO  <yamato@redhat.com>

	* output-pstoedit.c (make_temporary_file): New function.
	(output_pstoedit_writer): used make_temporary_file. 

	* configure.in: checked mkstemp and tmpnam if 
	HAVE_LIBPSTOEDIT is yes.

	* acconfig.h: Added HAVE_MKSTEMP and HAVE_TMPNAM.

2002-09-10  Martin Weber <martweb@gmx.net>

	* input.c (at_input_get_handler_by_suffix): added 
	cast to the returned value for Visual C++.

	* output-pstoedit.c (output_pstoedit_get_writer): 
	Likewise.

	Message-ID: <3D7D116C.68950963@gmx.net>.

2002-09-10  Martin Weber <martweb@gmx.net>

	* output-pstoedit.c: Include io.h if _VISUALC_
	is defined.
	(set_last_suffix): returned void.
	(output_pstoedit_writer): tmpfd is typed
	as char * if _VISUALC_ is defined.
	(output_pstoedit_writer): Use _mktemp instead
	of mkstemp if _VISUALC_ is defined.
	(output_pstoedit_writer): do fopen if 
	_VISUALC_ is defined.
	(output_pstoedit_writer): did fclose instead